moved service endpoint URLs to .env config instead of in application

--- a/.env.sample
+++ b/.env.sample
@@ -1,8 +1,8 @@
-AZURE_STORAGE_ACCOUNT=storageaccountname
+AZURE_STORAGE_ACCOUNT=https://storageaccountname.blob.core.windows.net
 AZURE_STORAGE_ACCOUNT_KEY=storagekey
 AZURE_STORAGE_CONTAINER=storagecontainername
-AZURE_SEARCH_SERVICE=searchservicename
+AZURE_SEARCH_SERVICE=https://searchservicename.search.windows.net
 AZURE_SEARCH_SERVICE_KEY=searchservicekey
 AZURE_SEARCH_INDEX=searchindexname
-AZURE_OPENAI_SERVICE=openaiservicename
+AZURE_OPENAI_SERVICE=https://openaiservicename.openai.azure.com
 AZURE_OPENAI_SERVICE_KEY=openaiservicekey
